# diy-tars

./: README.md
api/: core.py
dyi_tars/: main.py  pyproject.toml
dyi_tars/llm/model/: base_model.py  pre_trained_model.py
dyi_tars/src/: en_GB-southern_english_female-low.onnx.json
dyi_tars/stt/: whisper.py
dyi_tars/tests/: test_stt.py
stt/: whisper.py
tts/: piper.py
