[project]
name = "dyi_tars"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3.25",
    "llama-index>=0.12.35",
    "openai-whisper>=20240930",
    "pytest>=8.3.5",
    "torch>=2.7.0",
    "typing-extensions>=4.13.2",
    "whisper>=1.1.10",
]
